src/objects/lineItemFieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>columnName__c</fullName>
        <label>Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Line Item Field Mapping</label>
    <pluralLabel>Line Item Fields Mapping</pluralLabel>
</CustomObject>